@@ -1,5 +1,11 @@
 2019-12-11  Jason Merrill  <jason@redhat.com>
 
+	PR c++/57082 - new X{} and private destructor.
+	* init.c (build_new_1): Also pass tf_no_cleanup to
+	build_special_member_call.
+
+2019-12-11  Jason Merrill  <jason@redhat.com>
+
 	PR c++/92859 - ADL and bit-field.
 	* name-lookup.c: Use unlowered_expr_type.
 
